added some more blogs

--- a/content/blog/1.md
+++ b/content/blog/1.md
@@ -5,7 +5,7 @@ description: "In addition to supporting all basic Markdoc syntax, this template 
 date: 2022-11-01
 ---
 
-![Blogster](/images/ind1.png)
+![google-sdg](/images/ind1.png)
 
 
 >Bengal tigers account for about half of the world’s total tiger population, 70% of which can be found living in India. 
@@ -27,5 +27,11 @@ Human-Tiger Conflict Resolution: Implement measures to mitigate conflicts betwee
 
 Community Engagement: Involve local communities in tiger conservation through education, awareness programs, and the equitable sharing of benefits from tiger-related tourism and conservation initiatives.
 
+## Habitat location
+
+{% youtube url="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7719808.144460723!2d76.02942763347616!3d19.132314242830958!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a018264f05cd269%3A0xe99cba5218a4be78!2sSundarban%20National%20Park%20(West%20Bengal)!5e0!3m2!1sen!2sin!4v1708575438163!5m2!1sen!2sin" label="Everything is awesome - Lego movie song" /%}
 
 
+## Have you seen any endangered species near you? Let us know!!
+
+{% youtube url="https://docs.google.com/forms/d/e/1FAIpQLSctMI-bEBeAt7OkUT6PfsYeG0XIahkj_ugR3i4qTOisPq5eOQ/viewform?embedded=true" label="Everything is awesome - Lego movie song" /%}
