--- a/content/blog/7.md
+++ b/content/blog/7.md
@@ -5,7 +5,7 @@ description: "In addition to supporting all basic Markdoc syntax, this template 
 date: 2022-11-01
 ---
 
-![Blogster](/images/usa4.png)
+![google-sdg](/images/usa4.png)
 
 
 >California condors are the largest bird in North America. In the 1980s, California condors nearly went extinct due to poisoning from lead and consuming DDT, a pesticide that was banned in 1972. A successful captive breeding recovery program increased numbers from six to 223 in the early 2000s. Today, there are over 400 California condors, but they still are threatened by human-related deaths, such as collisions with power lines. 
@@ -16,7 +16,7 @@ date: 2022-11-01
 
 ## Habitat location
 
-{% youtube url="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d497701.7479300438!2d-122.45663966893159!3d37.78313639467061!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80858077b9de51b3%3A0x4a501367f076adff!2sSan%20Francisco%2C%20CA!5e0!3m2!1sen!2sus!4v1645141808601!5m2!1sen!2sus" label="Everything is awesome - Lego movie song" /%}
+{% youtube url="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52860348.99603272!2d-161.64836626011967!3d36.03641553598305!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54eab584e432360b%3A0x1c3bb99243deb742!2sUnited%20States!5e0!3m2!1sen!2sin!4v1708575630464!5m2!1sen!2sin" label="Everything is awesome - Lego movie song" /%}
 
 ## Here are some ways to save them:
 1. Lead Poisoning Prevention: Implement measures to reduce lead exposure in condors, such as promoting the use of non-lead ammunition by hunters to prevent ingestion of lead fragments from carcasses.
@@ -24,5 +24,8 @@ date: 2022-11-01
 3. Monitoring and Research: Conduct ongoing monitoring and research to understand the factors affecting condor populations and inform conservation strategies.
 4. Collaborative Conservation Efforts: Foster collaboration among government agencies, conservation organizations, and local communities to coordinate conservation actions and address threats to condor recovery effectively.
 
+## Have you seen any endangered species near you? Let us know!!
+
+{% youtube url="https://docs.google.com/forms/d/e/1FAIpQLSctMI-bEBeAt7OkUT6PfsYeG0XIahkj_ugR3i4qTOisPq5eOQ/viewform?embedded=true" label="Everything is awesome - Lego movie song" /%}
 
 
