--- a/content/blog/z1.md
+++ b/content/blog/z1.md
@@ -5,7 +5,7 @@ description: "In addition to supporting all basic Markdoc syntax, this template 
 date: 2022-11-01
 ---
 
-![Blogster](/images/first.png)
+![google-sdg](/images/first.png)
 
 >Are Amazon parrots endangered? Out of 36 species of Amazon parrots assessed by the IUCN, five are endangered and four are critically endangered, namely the imperial Amazon, lilacine Amazon, Puerto Rican Amazon, and yellow-naped Amazon. Two species have gone extinct—the Guadeloupe Amazon and the Martinique Amazon.
 
@@ -21,6 +21,9 @@ How long do Amazon parrots live? Depending on the species, Amazon parrots can li
 {% youtube url="https://www.youtube.com/embed/qssVCUHreIA?si=NtSw9bQdGAKiuzBK" label="Everything is awesome - Lego movie song" /%}
 
 
+## Have you seen any endangered species near you? Let us know!!
+
+{% youtube url="https://docs.google.com/forms/d/e/1FAIpQLSctMI-bEBeAt7OkUT6PfsYeG0XIahkj_ugR3i4qTOisPq5eOQ/viewform?embedded=true" label="Everything is awesome - Lego movie song" /%}
 
 
 
