--- a/content/blog/z3.md
+++ b/content/blog/z3.md
@@ -5,7 +5,7 @@ description: "In addition to supporting all basic Markdoc syntax, this template 
 date: 2022-11-01
 ---
 
-![Blogster](/images/2.png)
+![google-sdg](/images/2.png)
 
 >What is the mangrove finch? The mangrove finch is a species in Darwin’s finch group, part of the tanager family, with dull brown, olive-toned, and white plumage. It’s native to the Galápagos.
 
@@ -18,6 +18,9 @@ Is the mangrove finch endangered? The mangrove finch is one of the most critical
 {% youtube url="https://www.youtube.com/embed/MiXQ9GKva1A?si=T5ovkvN-vXOUSM62" label="Everything is awesome - Lego movie song" /%}
 
 
+## Have you seen any endangered species near you? Let us know!!
+
+{% youtube url="https://docs.google.com/forms/d/e/1FAIpQLSctMI-bEBeAt7OkUT6PfsYeG0XIahkj_ugR3i4qTOisPq5eOQ/viewform?embedded=true" label="Everything is awesome - Lego movie song" /%}
 
 
 
