--- a/content/blog/z5.md
+++ b/content/blog/z5.md
@@ -2,10 +2,10 @@
 external: false
 title: "New Zealand storm petrel"
 description: "In addition to supporting all basic Markdoc syntax, this template also supports extended markdown syntax to render custom components."
-date: 2022-11-01
+date: 2023-11-01
 ---
 
-![Blogster](/images/4.png)
+![google-sdg](/images/4.png)
 
 >What is the New Zealand storm petrel? Native to the waters between New Zealand’s North Island and eastern Australia, the New Zealand storm petrel is a small seabird. Similar to the more common Wilson’s storm petrel, it has a black head, wings, and tail and a bright white stripe around its back. This bird only comes to land to breed and spends the rest of its life at sea.
 
@@ -16,6 +16,9 @@ Why is the New Zealand storm petrel endangered? It is estimated that fewer than 
 {% youtube url="https://www.youtube.com/embed/xKzL0i51HDs?si=oeLfZqxsZ3W_ZbpE" label="Everything is awesome - Lego movie song" /%}
 
 
+## Have you seen any endangered species near you? Let us know!!
+
+{% youtube url="https://docs.google.com/forms/d/e/1FAIpQLSctMI-bEBeAt7OkUT6PfsYeG0XIahkj_ugR3i4qTOisPq5eOQ/viewform?embedded=true" label="Everything is awesome - Lego movie song" /%}
 
 
 
