--- a/content/blog/3.md
+++ b/content/blog/3.md
@@ -5,7 +5,7 @@ description: "In addition to supporting all basic Markdoc syntax, this template 
 date: 2022-11-01
 ---
 
-![Blogster](/images/ind3.png)
+![google-sdg](/images/ind3.png)
 
 
 >Much like the Asiatic Lion, snow leopards used to have much larger habitats and prowled across the mountain ranges of Asia. Now, they can only be found in Ladakh, Himachal Pradesh, Uttarakhand and the western and eastern parts of the Himalayas, with population numbers down to about 500 in India.
@@ -24,3 +24,11 @@ Livestock Protection: Implement predator-proof enclosures and compensation schem
 Research and Monitoring: Conduct comprehensive research and monitoring programs to better understand snow leopard behavior, habitat use, and population dynamics.
 
 International Cooperation: Collaborate with neighboring countries to coordinate conservation efforts and protect transboundary snow leopard populations effectively.
+
+## Habitat location
+
+{% youtube url="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15281597.148963124!2d72.096636373967!3d20.756521302149036!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30635ff06b92b791%3A0xd78c4fa1854213a6!2sIndia!5e0!3m2!1sen!2sin!4v1708575547434!5m2!1sen!2sin" label="Everything is awesome - Lego movie song" /%}
+
+## Have you seen any endangered species near you? Let us know!!
+
+{% youtube url="https://docs.google.com/forms/d/e/1FAIpQLSctMI-bEBeAt7OkUT6PfsYeG0XIahkj_ugR3i4qTOisPq5eOQ/viewform?embedded=true" label="Everything is awesome - Lego movie song" /%}
