--- a/content/blog/4.md
+++ b/content/blog/4.md
@@ -5,7 +5,7 @@ description: "In addition to supporting all basic Markdoc syntax, this template 
 date: 2022-11-01
 ---
 
-![Blogster](/images/usa1.png)
+![google-sdg](/images/usa1.png)
 
 
 >The Florida panther has been listed as an endangered species since 1967 and now lives in just 5% of its former range. This panther used to roam much of the southeastern U.S. but is now only found in southern Florida. There are only about 100 to 200 panthers left. They were heavily hunted and perceived as pests before being listed as endangered; today, their main threats are habitat loss and collisions with vehicles.
@@ -16,7 +16,8 @@ date: 2022-11-01
 
 ## Habitat location
 
-{% youtube url="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d497701.7479300438!2d-122.45663966893159!3d37.78313639467061!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80858077b9de51b3%3A0x4a501367f076adff!2sSan%20Francisco%2C%20CA!5e0!3m2!1sen!2sus!4v1645141808601!5m2!1sen!2sus" label="Everything is awesome - Lego movie song" /%}
+{% youtube url="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52860348.99603272!2d-161.64836626011967!3d36.03641553598305!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54eab584e432360b%3A0x1c3bb99243deb742!2sUnited%20States!5e0!3m2!1sen!2sin!4v1708575630464!5m2!1sen!2sin" label="Everything is awesome - Lego movie song" /%}
+
 
 ## Here are some ways to help save them:
 1. Habitat Preservation: Protect and expand the natural habitats of Florida Panthers, such as the Everglades, through land conservation efforts.
@@ -24,5 +25,8 @@ date: 2022-11-01
 3. Genetic Diversity Conservation: Introduce genetic diversity into the Florida Panther population through carefully managed breeding programs with closely related puma subspecies.
 4. Public Awareness and Education: Raise awareness among local communities about the importance of preserving the Florida Panther and encourage responsible behavior to coexist harmoniously with these big cats.
 
+## Have you seen any endangered species near you? Let us know!!
+
+{% youtube url="https://docs.google.com/forms/d/e/1FAIpQLSctMI-bEBeAt7OkUT6PfsYeG0XIahkj_ugR3i4qTOisPq5eOQ/viewform?embedded=true" label="Everything is awesome - Lego movie song" /%}
 
 
