--- a/content/blog/5.md
+++ b/content/blog/5.md
@@ -5,7 +5,7 @@ description: "In addition to supporting all basic Markdoc syntax, this template 
 date: 2022-11-01
 ---
 
-![Blogster](/images/usa2.png)
+![google-sdg](/images/usa2.png)
 
 
 >Another Florida-based species, the Florida manatee is found off the coasts of Florida and has been listed as endangered since 1973. Boat strikes are a top threat to manatees, but climate change has caused caused problems for these gentle “sea cows.” Water temperature fluctuations put stress on the species, and increasing rates of deadly algal blooms are also to blame. In recent years, sea grass scarcity has led to starvation for these animals.
@@ -15,7 +15,8 @@ date: 2022-11-01
 
 ## Habitat location
 
-{% youtube url="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d497701.7479300438!2d-122.45663966893159!3d37.78313639467061!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80858077b9de51b3%3A0x4a501367f076adff!2sSan%20Francisco%2C%20CA!5e0!3m2!1sen!2sus!4v1645141808601!5m2!1sen!2sus" label="Everything is awesome - Lego movie song" /%}
+{% youtube url="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52860348.99603272!2d-161.64836626011967!3d36.03641553598305!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54eab584e432360b%3A0x1c3bb99243deb742!2sUnited%20States!5e0!3m2!1sen!2sin!4v1708575630464!5m2!1sen!2sin" label="Everything is awesome - Lego movie song" /%}
+
 
 ## Here are some ways to help save them:
 1. Protection of Critical Habitats: Establish and enforce regulations to safeguard the warm-water refuges that manatees rely on during cold weather, such as springs and power plant outflows.
@@ -24,4 +25,7 @@ date: 2022-11-01
 4. Rescue and Rehabilitation Programs: Support efforts to rescue and rehabilitate injured or sick manatees, helping to mitigate the impacts of human activities on their populations.
 
 
+## Have you seen any endangered species near you? Let us know!!
+
+{% youtube url="https://docs.google.com/forms/d/e/1FAIpQLSctMI-bEBeAt7OkUT6PfsYeG0XIahkj_ugR3i4qTOisPq5eOQ/viewform?embedded=true" label="Everything is awesome - Lego movie song" /%}
 
