--- a/content/blog/6.md
+++ b/content/blog/6.md
@@ -5,7 +5,7 @@ description: "In addition to supporting all basic Markdoc syntax, this template 
 date: 2022-11-01
 ---
 
-![Blogster](/images/usa3.png)
+![google-sdg](/images/usa3.png)
 
 
 >There are only about 15 to 17 red wolves left in the wild in the U.S. In 1987, they were considered extinct, but a captive breeding program revived the species. Conservation efforts brought the population to over 100 animals around 2012, but by 2018, it dropped to 40 and now sits at less than two dozen.
@@ -16,7 +16,7 @@ date: 2022-11-01
 
 ## Habitat location
 
-{% youtube url="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d497701.7479300438!2d-122.45663966893159!3d37.78313639467061!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80858077b9de51b3%3A0x4a501367f076adff!2sSan%20Francisco%2C%20CA!5e0!3m2!1sen!2sus!4v1645141808601!5m2!1sen!2sus" label="Everything is awesome - Lego movie song" /%}
+{% youtube url="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52860348.99603272!2d-161.64836626011967!3d36.03641553598305!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54eab584e432360b%3A0x1c3bb99243deb742!2sUnited%20States!5e0!3m2!1sen!2sin!4v1708575630464!5m2!1sen!2sin" label="Everything is awesome - Lego movie song" /%}
 
 ## Here are some ways to help save them:
 1. Population Monitoring and Management: Implement comprehensive monitoring programs to track the population size and genetic health of red wolves, along with active management strategies such as controlled breeding and relocation.
@@ -26,3 +26,6 @@ date: 2022-11-01
 
 
 
+## Have you seen any endangered species near you? Let us know!!
+
+{% youtube url="https://docs.google.com/forms/d/e/1FAIpQLSctMI-bEBeAt7OkUT6PfsYeG0XIahkj_ugR3i4qTOisPq5eOQ/viewform?embedded=true" label="Everything is awesome - Lego movie song" /%}
