--- a/content/blog/8.md
+++ b/content/blog/8.md
@@ -5,7 +5,7 @@ description: "In addition to supporting all basic Markdoc syntax, this template 
 date: 2022-11-01
 ---
 
-![Blogster](/images/usa5.png)
+![google-sdg](/images/usa5.png)
 
 
 >The only ferret species native to North America, there are only about 370 wild black-footed ferrets left in the wild. These creatures use prairie dog burrows across grasslands for their shelter, but increasing habitat loss due to agriculture has hurt the population. They eat prairie dogs, too, and prairie-dog eradication efforts have depleted their food source. They are also susceptible to diseases.
@@ -16,7 +16,8 @@ date: 2022-11-01
 
 ## Habitat location
 
-{% youtube url="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d497701.7479300438!2d-122.45663966893159!3d37.78313639467061!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80858077b9de51b3%3A0x4a501367f076adff!2sSan%20Francisco%2C%20CA!5e0!3m2!1sen!2sus!4v1645141808601!5m2!1sen!2sus" label="Everything is awesome - Lego movie song" /%}
+{% youtube url="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52860348.99603272!2d-161.64836626011967!3d36.03641553598305!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54eab584e432360b%3A0x1c3bb99243deb742!2sUnited%20States!5e0!3m2!1sen!2sin!4v1708575630464!5m2!1sen!2sin" label="Everything is awesome - Lego movie song" /%}
+
 
 ## Here are some ways to save them:
 Habitat Conservation: Protect and restore the prairie ecosystems where Black-Footed Ferrets live. This involves preserving grasslands, controlling invasive species, and reintroducing native plants that support their prey base, such as prairie dogs.
@@ -28,4 +29,7 @@ Disease Management: Implement disease monitoring and management strategies to mi
 Community Engagement and Education: Educate local communities about the importance of Black-Footed Ferret conservation and involve them in conservation efforts. This can include outreach programs, workshops, and initiatives to promote coexistence with wildlife while addressing human-wildlife conflicts.
 
 
+## Have you seen any endangered species near you? Let us know!!
+
+{% youtube url="https://docs.google.com/forms/d/e/1FAIpQLSctMI-bEBeAt7OkUT6PfsYeG0XIahkj_ugR3i4qTOisPq5eOQ/viewform?embedded=true" label="Everything is awesome - Lego movie song" /%}
 
